--- a/style.css
+++ b/style.css
@@ -440,7 +440,13 @@ header :checked ~ .icon-list .line:nth-child(3){
   color: black;
  }
 
-
+ .contact{
+  text-align: center;
+  background-color: blue;
+  color: white;
+  font-size: 30px;
+  margin-bottom: 20;
+ }
  
   
 
